--- a/Cravings/app/src/main/res/layout/activity_main.xml
+++ b/Cravings/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:textSize="20dp"
-                android:text="Craving: Pizza"
+                android:text="@string/craving"
+                android:clickable="true"
+                android:onClick="searchCraving"
                 android:id="@+id/main_usercraving" />
             <TextView
                 android:layout_width="wrap_content"
