--- a/Cravings/app/src/main/res/layout/activity_main.xml
+++ b/Cravings/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:orientation="vertical" >
-            <ImageView
+            <com.facebook.login.widget.ProfilePictureView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginLeft="20dp"
