--- a/Cravings/app/src/main/res/layout/main_profilelistitem_view.xml
+++ b/Cravings/app/src/main/res/layout/main_profilelistitem_view.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="fill_parent"
     android:layout_height="70dp">
-    <ImageView
+    <com.facebook.login.widget.ProfilePictureView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
