--- a/Cravings/app/src/main/res/layout/activity_login.xml
+++ b/Cravings/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.cravingscravings.cravings.LoginActivity">
+    tools:context="com.cravingscravings.cravings.activities.LoginActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
             android:id="@+id/login_radiobutton3" />
     </RadioGroup>
 
-    <fragment android:name="com.cravingscravings.cravings.LoginFacebookFragment"
+    <fragment android:name="com.cravingscravings.cravings.fragments.LoginFacebookFragment"
         android:layout_width="wrap_content"
         android:layout_height="0px"
         android:layout_weight="1"
