--- a/Cravings/app/src/main/res/layout/fragment_event_home.xml
+++ b/Cravings/app/src/main/res/layout/fragment_event_home.xml
@@ -8,50 +8,85 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#FFC107"
+        android:orientation="vertical"
+
         android:elevation="4dp">
         <LinearLayout
-
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginBottom="12dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp">
-        </LinearLayout>
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#FFC107">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:id="@+id/event_home_event_craving"
+                android:text="@string/event_home_event_craving"
                 android:textSize="22dp"
-                android:textColor="#FFFFFF"
+                android:gravity="center"
+                android:textColor="#FFFFFF"/>
+        </LinearLayout>
 
-                android:padding="12dp"
-                android:paddingRight="12dp"
-                android:paddingLeft="12dp"
-                android:id="@+id/event_home_craving"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:orientation="horizontal"
+            android:textSize="12dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/event_home_user_craving"
+                android:text="@string/event_home_user_craving"
+                android:background="#FFCDD2"
+                android:layout_weight="1"
+                android:gravity="center"
                 />
-        </RelativeLayout>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/event_home_change_craving_button"
+                android:text="@string/event_home_change_craving_button"
+                android:background="#F44336"
+                android:textColor="#FFFFFF"
+                android:layout_weight="0"
+                />
+        </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/location"/>
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/event_home_craving_listing"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="#F44336">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:background="#FFC107">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/time"/>
+            android:id="@+id/event_home_time"
+            android:text="@string/event_home_time"
+            android:textSize="22dp"
+            android:textColor="#FFFFFF"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/event_home_location"
+            android:text="@string/event_home_location"
+            android:textSize="22dp"
+            android:textColor="#FFFFFF"/>
 
     </LinearLayout>
 </LinearLayout>
