--- a/Cravings/app/src/main/res/layout/fragment_event_home.xml
+++ b/Cravings/app/src/main/res/layout/fragment_event_home.xml
@@ -1,16 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.cravingscravings.cravings.fragments.EventHomeFragment">
 
-    <LinearLayout
+    <!-- Header -->
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-
-        android:elevation="4dp">
+        android:id="@+id/header"
+        android:elevation="4dp"
+        android:gravity="center"
+        android:layout_alignParentTop="true">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,68 +28,53 @@
                 android:gravity="center"
                 android:textColor="#FFFFFF"/>
         </LinearLayout>
+    </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:orientation="horizontal"
-            android:textSize="12dp">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/event_home_user_craving"
-                android:text="@string/event_home_user_craving"
-                android:background="#FFCDD2"
-                android:layout_weight="1"
-                android:gravity="center"
-                />
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/event_home_change_craving_button"
-                android:text="@string/event_home_change_craving_button"
-                android:background="#F44336"
-                android:textColor="#FFFFFF"
-                android:layout_weight="0"
-                />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:id="@+id/event_home_craving_listing"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="#F44336">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_height="60dp"
+    <!-- Footer -->
+    <RelativeLayout
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:background="#FFC107">
-        <TextView
+        android:background="#FFC107"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:id="@+id/footer">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/event_home_time"
-            android:text="@string/event_home_time"
-            android:textSize="22dp"
-            android:textColor="#FFFFFF"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/event_home_location"
-            android:text="@string/event_home_location"
-            android:textSize="22dp"
-            android:textColor="#FFFFFF"/>
+            android:orientation="vertical"
+            android:padding="12dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/event_home_time"
+                android:text="@string/event_home_time"
+                android:textSize="22dp"
+                android:textColor="#FFFFFF"
+                android:gravity="center"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/event_home_location"
+                android:text="@string/event_home_location"
+                android:textSize="22dp"
+                android:textColor="#FFFFFF"
+                android:gravity="center"/>
+        </LinearLayout>
+    </RelativeLayout>
 
-    </LinearLayout>
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/footer"
+        android:layout_below="@id/header"
+        >
+        <ListView
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/craving_vote_list_view"
+        android:scrollbars="vertical"></ListView>
+    </RelativeLayout>
+
+
+</RelativeLayout>
